Fixed positioning bug in 'alps', fixed overlapping subnav issues and overlapping text within tables in 'clouds' and 'snow'.

--- a/alps/alps.css
+++ b/alps/alps.css
@@ -228,7 +228,7 @@ body {
  */
 
 #subnav {
-	margin: 1em 0 -3em 2.1%;
+	margin: 1em 0 -3em 0;
 	float: right;
 	width: 80%;
 }
