--- a/clouds/clouds.css
+++ b/clouds/clouds.css
@@ -239,6 +239,8 @@ body {
 	height:		14px;
 
 /*	border: 			2px solid blue; */
+
+	margin-left:			250px;
 }
 #xxsubnav a {
 /*	height:				20px; */
