--- a/snow/snow.css
+++ b/snow/snow.css
@@ -294,6 +294,8 @@ body 	{
 	text-align:	left;
 	padding-top:	15px;
 	margin-left:	10px;
+
+	white-space:	normal;
 	} 
 
 
